[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/Fibberish/Fibberish.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/black.png" type="Texture" id=2]
[ext_resource path="res://assets/square.png" type="Texture" id=3]
[ext_resource path="res://Screens/ChooseShape.gd" type="Script" id=4]
[ext_resource path="res://assets/triangle.png" type="Texture" id=5]
[ext_resource path="res://Screens/ShapeButton.gd" type="Script" id=6]
[ext_resource path="res://assets/UIThemes/Menus.tres" type="Theme" id=7]
[ext_resource path="res://Screens/TextBlock.gd" type="Script" id=8]
[ext_resource path="res://assets/kite.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 111
font_data = ExtResource( 1 )

[node name="ChooseShape" type="Node2D"]
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 24.0647, 16.4033 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 33.0
margin_right = 932.0
margin_bottom = 157.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Choose your shape"
text = "Choose your shape"
fit_content_height = true

[node name="Square block" type="RichTextLabel" parent="."]
margin_left = 384.0
margin_top = 399.0
margin_right = 574.0
margin_bottom = 527.0
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "Survive 5 rounds as Triangle"
text = "Survive 5 rounds as Triangle"
script = ExtResource( 8 )

[node name="Kite block" type="RichTextLabel" parent="."]
margin_left = 666.0
margin_top = 391.0
margin_right = 856.0
margin_bottom = 519.0
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "Survive 5 rounds as Square"
text = "Survive 5 rounds as Square"
script = ExtResource( 8 )
shape = "kite"

[node name="Triangle" type="TextureButton" parent="."]
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = 93.0
margin_top = 235.0
margin_right = 333.0
margin_bottom = 475.0
rect_scale = Vector2( 0.6, 0.6 )
focus_neighbour_right = NodePath("../Square")
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 5 )
script = ExtResource( 6 )
shape = "Triangle"
enabled = true

[node name="Square" type="TextureButton" parent="."]
visible = false
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = 391.0
margin_top = 234.0
margin_right = 631.0
margin_bottom = 474.0
rect_scale = Vector2( 0.61363, 0.61363 )
focus_neighbour_left = NodePath("../Triangle")
focus_neighbour_right = NodePath("../Kite")
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Kite" type="TextureButton" parent="."]
visible = false
modulate = Color( 0.5, 0.5, 0.5, 1 )
margin_left = 686.0
margin_top = 234.0
margin_right = 926.0
margin_bottom = 474.0
rect_scale = Vector2( 0.6, 0.6 )
focus_neighbour_left = NodePath("../Square")
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 9 )
script = ExtResource( 6 )
shape = "Kite"

[connection signal="unlock" from="Square block" to="Square" method="_on_block_unlock"]
[connection signal="unlock" from="Kite block" to="Kite" method="_on_block_unlock"]
[connection signal="focus_entered" from="Triangle" to="Triangle" method="_on_focus_entered"]
[connection signal="focus_exited" from="Triangle" to="Triangle" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Triangle" to="Triangle" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Triangle" to="Triangle" method="_on_mouse_exited"]
[connection signal="pressed" from="Triangle" to="Triangle" method="_on_pressed"]
[connection signal="focus_entered" from="Square" to="Square" method="_on_focus_entered"]
[connection signal="focus_exited" from="Square" to="Square" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Square" to="Square" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Square" to="Square" method="_on_mouse_exited"]
[connection signal="pressed" from="Square" to="Square" method="_on_pressed"]
[connection signal="focus_entered" from="Kite" to="Kite" method="_on_focus_entered"]
[connection signal="focus_exited" from="Kite" to="Kite" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Kite" to="Kite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Kite" to="Kite" method="_on_mouse_exited"]
[connection signal="pressed" from="Kite" to="Kite" method="_on_pressed"]
